@@ -42,6 +42,7 @@ class ApplicationController < ActionController::Base
   #----------------------------------------------------------------------------
   def current_user
     @current_user ||= (current_user_session && current_user_session.record)
+    User.current_user = @current_user
   end
   
   #----------------------------------------------------------------------------
