@@ -52,7 +52,7 @@ Factory(:default_settings)
 # Note: Authentication is NOT ActiveRecord model, so we mock and stub it using RSpec.
 #----------------------------------------------------------------------------
 def login(session_stubs = {}, user_stubs = {})
-  @current_user = Factory(:user, user_stubs)
+  User.current_user = @current_user = Factory(:user, user_stubs)
   @current_user_session = mock_model(Authentication, {:record => @current_user}.merge(session_stubs))
   Authentication.stub!(:find).and_return(@current_user_session)
 end
